@@ -2,6 +2,10 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) mod_cache: While serving a cached entity ensure that filters that have
+     been applied to this cached entity before saving it to the cache are not
+     applied again. PR 40090. [Ruediger Pluem]
+
   *) mod_proxy_ajp: Added cping/cpong support for the AJP protocol.
      A new worker directive ping=timeout will cause CPING packet
      to be send expecting CPONG packet within defined timeout.
